1. fix portfolioItems Z-index on firefox.
2. Change website description from standard create-creat-app.

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -20,8 +20,7 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     background-color: #525252;
     overflow: hidden;
-    /* text-align: center; */
-    /* z-index: -1; */
+    z-index: -1;
 }
 
 .portfolioItem-image-container {
